feat: Update aggregated results button and translations
- Add new translation key 'events.aggregatedResultsButtonLabel' for "Aggregated Results" in English, Spanish, and Galician.
- Modify EventSelection.tsx:
    - Replace BarChart2 icon with the translated text "Aggregated Results" on the event results button.
    - Use the new i18n key for the button label.
- Update TODO.md to reflect the completion of the first task related to the aggregated results button.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -102,7 +102,8 @@
     "startDate": "Start Date",
     "endDate": "End Date",
     "select": "Select Event",
-    "noEvents": "No events available"
+    "noEvents": "No events available",
+    "aggregatedResultsButtonLabel": "Aggregated Results"
   },
   "auth": {
     "login": "Login",
