--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -102,7 +102,8 @@
     "startDate": "Fecha de Inicio",
     "endDate": "Fecha de Fin",
     "select": "Seleccionar Evento",
-    "noEvents": "No hay eventos disponibles"
+    "noEvents": "No hay eventos disponibles",
+    "aggregatedResultsButtonLabel": "Resultados Agregados"
   },
   "auth": {
     "login": "Iniciar Sesión",
