--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -102,7 +102,8 @@
     "startDate": "Data de Inicio",
     "endDate": "Data de Fin",
     "select": "Seleccionar Evento",
-    "noEvents": "Non hai eventos dispoñibles"
+    "noEvents": "Non hai eventos dispoñibles",
+    "aggregatedResultsButtonLabel": "Resultados Agregados"
   },
   "auth": {
     "login": "Iniciar Sesión",
