feat: Update 'Total Carbon Footprint' translation
- Modify translation files (en.json, es.json, gl.json) to change the "results.totalCarbonFootprint" key.
  - Before: "Total carbon footprint"
  - After: "Carbon footprint (transport + accommodation)" (and its Spanish/Galician equivalents).
- Update TODO.md to mark task #2 as completed.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -75,7 +75,7 @@
     "aggregatedResults": "Aggregated results for all trips",
     "noData": "No data available for this event",
     "carbonFootprint": "Carbon footprint",
-    "totalCarbonFootprint": "Total carbon footprint",
+    "totalCarbonFootprint": "Carbon footprint (transport + accommodation)",
     "treesNeeded": "{{count}} trees would be needed to offset these emissions in one year",
     "totalDistance": "Total distance traveled",
     "distance": "Distance",
