feat: Refactor participant display and align with DB structure
- Implement TODO #3: Refactor participant counting
    - Removed "Total Participants" metric from EventResults.tsx.
    - Added new metrics:
        - "People with reported transport data" (calculated as transport_data_submissions_count).
        - "People with reported accommodation data" (calculated as accommodation_data_submissions_count), also displaying total hotel nights.
    - Updated 'EventResults.tsx' to fetch and calculate these counts based on 'travel_data_submissions' and 'travel_segments'.
    - Corrected Supabase query to use 'calculated_carbon_footprint' from 'travel_segments' instead of 'carbon_footprint'.

- Address TODO #4: Participant data display
    - By implementing changes for TODO #3, the display of participant-related data has been fundamentally changed, addressing the previous inconsistencies.
    - The "By User Type" section in EventResults.tsx now shows carbon footprint and distance, not a direct participant count per type.

- Update i18n files (en, es, gl):
    - Removed 'results.totalParticipants' and 'results.participantsLabel'.
    - Added 'results.transportDataReported' and 'results.accommodationDataReported' to support the new metrics.

- Mark TODO item #3 as completed and #4 as addressed by the new approach.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -85,11 +85,10 @@
     "totalAccommodation": "Total accommodation",
     "accommodation": "Accommodation",
     "nightsLabel": "Total hotel nights",
-    "totalParticipants": "Total participants",
-    "participantsLabel": "Number of responses",
-    "participants": "participants",
     "trips": "Number of trips",
-    "print": "Print results"
+    "print": "Print results",
+    "transportDataReported": "People with reported transport data",
+    "accommodationDataReported": "People with reported accommodation data"
   },
   "events": {
     "selectTitle": "Select an Event",
