feat: Implement user typology details and refactor data saving
- Implement TODO #5: User Typology and "Other" Specification
    - Changed "userType.title" translation to "Tipología de persona usuaria" (and equivalents) in i18n files (en.json, es.json, gl.json).
    - Added "userType.specifyOther" translation for the new input field.
    - In TravelForm.tsx:
        - Added 'userTypeOtherDetails' field to the form state and Zod schema.
        - Implemented conditional display of a text input for 'userTypeOtherDetails' when userType is 'other'.
        - Made 'userTypeOtherDetails' conditionally required using Zod's superRefine.
        - Imported 'useFormContext' from 'react-hook-form' to resolve previous ReferenceError.
    - Updated 'TravelData' type in 'src/types/index.ts' to include the optional 'userTypeOtherDetails' field, resolving TypeScript errors.

- Refactor 'saveToDatabase' function in TravelForm.tsx:
    - Aligned data saving logic with the normalized database schema (travel_data_submissions and travel_segments).
    - Step 1: Inserts a record into 'travel_data_submissions' containing event_id, user_type, user_type_other_details, total_hotel_nights, and comments. Retrieves the new submission ID.
    - Step 2: Inserts all travel segments into 'travel_segments', each linked by the new submission_id. Redundant fields (user_type, comments, event_id) are no longer saved directly to segments.
    - Improved error handling by using 'methods.setError' to display server-side errors on the form.

- Update TODO.md: Mark item #5 as completed, noting that the UI/validation part is done, and the database saving for 'userTypeOtherDetails' is now correctly handled by the refactored 'saveToDatabase'.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -21,14 +21,15 @@
     "submitting": "Submitting..."
   },
   "userType": {
-    "title": "Transport type",
+    "title": "User typology",
     "public": "Public",
     "participant": "Participant",
     "logistics": "Logistics",
     "provider": "Provider",
     "staff": "Staff",
     "other": "Other",
-    "required": "Please select a user type"
+    "required": "Please select a user type",
+    "specifyOther": "Please specify the 'Other' user type"
   },
   "transport": {
     "segments": "Travel segments",
