Feat: Enhance travel segments form and data
Combined and addressed TODO points 5, 6, 7, and 8:

- User Interface & Experience:
    - Changed "transport type" label to "user typology" in user type selection.
    - Made specifying details for 'Other' user type mandatory.
    - Displayed selected user typology in the travel segments section header.
    - Ensured 'Select vehicle type' and 'Select fuel type' dropdown placeholders are disabled, internationalized, and non-selectable.
    - Restricted date pickers for segment start/end dates to not allow dates before today.

- Travel Segments Functionality:
    - Made origin and destination fields mandatory.
    - Implemented 'startDate' and 'endDate' fields for travel segments.
    - Added 'vehicleTypeOtherDetails' field, conditionally mandatory if 'Other' vehicle type is selected.
    - Removed 'returnTrip' option, relying solely on 'frequency'.
    - Added 'Unknown' option to fuel types.

- Data Model & Types:
    - Updated `TravelSegment` type (added `startDate`, `endDate`, `vehicleTypeOtherDetails`; removed `returnTrip`).
    - Updated `FuelType` to include `unknown`.
    - Updated `travel_segments` table definition in `src/types/Database.ts` (renamed `date` to `start_date`, added `end_date`).
    - Note: This requires a corresponding SQL migration for the `travel_segments` table:
      `ALTER TABLE travel_segments RENAME COLUMN date TO start_date;`
      `ALTER TABLE travel_segments ADD COLUMN end_date DATE;`

- Backend & Form Logic:
    - Updated Zod schemas in `TravelForm.tsx` for new fields, validations (e.g., endDate >= startDate), and conditional requirements.
    - Adjusted default form values and `saveToDatabase` logic in `TravelForm.tsx` to align with schema changes.

- Code Quality & Maintenance:
    - Corrected TypeScript/linter errors in `TravelSegment.tsx` related to dynamic error message display.
    - Added all necessary i18n keys for new fields, options, and validation messages.
    - Updated `TODO.md` 

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -48,12 +48,14 @@
     "plane": "Plane",
     "other": "Other",
     "fuelType": "Fuel type",
+    "selectFuelType": "Select a fuel type",
     "fuel": {
       "gasoline": "Gasoline",
       "diesel": "Diesel",
       "hybrid": "Hybrid",
       "pluginHybrid": "Plug-in hybrid",
-      "electric": "Electric"
+      "electric": "Electric",
+      "unknown": "Unknown fuel"
     },
     "passengers": "Number of passengers",
     "vanSize": "Tonnage",
@@ -64,7 +66,12 @@
     "origin": "Origin",
     "destination": "Destination",
     "returnTrip": "Same return trip",
-    "frequency": "Frequency (number of times)"
+    "frequency": "Frequency (number of times)",
+    "specifyVehicleOther": "Please specify the 'Other' vehicle type",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "selectVehicleType": "Select a vehicle type",
+    "fuelTypeRequired": "Fuel type is required for this vehicle"
   },
   "accommodation": {
     "title": "Accommodation",
@@ -115,5 +122,11 @@
   },
   "error": {
     "savingData": "Error saving data. Please try again."
+  },
+  "validation": {
+    "originRequired": "Origin is required",
+    "destinationRequired": "Destination is required",
+    "vehicleTypeOtherRequired": "Specification for 'Other' vehicle type is required",
+    "endDateAfterStartDate": "End date cannot be before start date"
   }
 }
