Feat: Add number of people and vehicles to travel segments
Implements TODO point #10, allowing users to specify:
- The number of people for any vehicle type in a travel segment.
- The number of vehicles used, for applicable types (car, motorcycle, van, truck, bus).

Detailed changes:
- Types (`src/types/index.ts`):
    - Added `numberOfVehicles?: number` to the `TravelSegment` interface.
- UI & Component Logic (`src/components/TravelSegment.tsx`):
    - The "Number of people" field (previously "passengers") is now always visible for all vehicle types.
    - A new conditional input field for "Number of vehicles" has been added, appearing only for relevant vehicle types (car, motorcycle, van, truck, bus).
- Form Handling (`src/components/TravelForm.tsx`):
    - Zod schema for segments updated to include `numberOfVehicles` (optional, min 1).
    - Default segment values now include `numberOfVehicles`.
    - `saveToDatabase` function updated to correctly include `number_of_vehicles` when inserting segments and to efficiently batch insert multiple segments.
- Internationalization (i18n locale files):
    - Added new keys: `transport.numberOfVehicles` and `validation.numberOfVehiclesRequired`.
    - Updated `transport.passengers` translation for better clarity (e.g., "Número de personas (viajando juntas en este tramo)").
- Documentation (`TODO.md`):
    - Marked point #10 as complete with a summary of the implementation.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -57,7 +57,7 @@
       "electric": "Electric",
       "unknown": "Unknown fuel"
     },
-    "passengers": "Number of passengers",
+    "passengers": "Number of people",
     "vanSize": "Tonnage",
     "truckSize": "Tonnage",
     "carbonCompensated": "Did the company offset emissions?",
@@ -71,7 +71,8 @@
     "startDate": "Start Date",
     "endDate": "End Date",
     "selectVehicleType": "Select a vehicle type",
-    "fuelTypeRequired": "Fuel type is required for this vehicle"
+    "fuelTypeRequired": "Fuel type is required for this vehicle",
+    "numberOfVehicles": "Number of vehicles"
   },
   "accommodation": {
     "title": "Accommodation",
@@ -127,6 +128,7 @@
     "originRequired": "Origin is required",
     "destinationRequired": "Destination is required",
     "vehicleTypeOtherRequired": "Specification for 'Other' vehicle type is required",
-    "endDateAfterStartDate": "End date cannot be before start date"
+    "endDateAfterStartDate": "End date cannot be before start date",
+    "numberOfVehiclesRequired": "Number of vehicles is required"
   }
 }
