Feat: Add example text for travel segments section
Implements TODO point #12 to clarify how users should input
travel segments by providing an illustrative example.

- UI (`src/components/TravelForm.tsx`):
    - Added a descriptive example below the "Travel Segments" title,
      explaining how to break down a complex journey into multiple segments
      (e.g., plane trip as one segment, multiple car trips as another).
- Internationalization (i18n locale files):
    - Added new translation keys `transport.segmentsExampleTitle` and
      `transport.segmentsExampleBody` for the example text in
      English, Spanish, and Galician.
- Documentation (`TODO.md`):
    - Marked point #12 as complete with a summary of this change.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -72,7 +72,9 @@
     "endDate": "End Date",
     "selectVehicleType": "Select a vehicle type",
     "fuelTypeRequired": "Fuel type is required for this vehicle",
-    "numberOfVehicles": "Number of vehicles"
+    "numberOfVehicles": "Number of vehicles",
+    "segmentsExampleTitle": "Example:",
+    "segmentsExampleBody": "A person traveling from Barcelona to Santiago by plane, then for three days makes a round trip between Santiago and Portas by car, and finally returns from Santiago to Barcelona by plane, should enter one segment for the plane trip (frequency, 2) and click \"Add segment\" to add the car trips (frequency, 6)."
   },
   "accommodation": {
     "title": "Accommodation",
