feat(events): Implement detailed user typology for Pontevedra 2025 event
Implements the user typology requirements for the "Campeonato Mundial de Triatlón Multideporte Pontevedra 2025" as per TODO item 14.

Key changes:
- Added new UserTypes:
  - `event_staff_accredited`
  - `internal_staff_organization`
  - `transport_services_stakeholders`
- Maintained existing UserTypes `logistics` and `staff` as per revised requirements.
- Introduced new specific data fields and corresponding types:
  - `AccreditedRole` (loc, vip, timing, photo, media, tv_production, sports_delegations, other_accredited_role)
  - `TransportServiceType` (spectator_shuttle_bus, team_transport_services)
  - `accreditedRoleOtherDetails`
  - `organizationStaffDetails`
- Updated `TravelForm.tsx`:
  - Modified Zod schema (`travelFormSchema`) to include new user types, roles, service types, and conditional validations.
  - Added conditional input fields (`AccreditedRoleInput`, `OrganizationStaffDetailsInput`, `TransportServiceTypeInput`) that appear based on the selected UserType.
  - Adjusted multi-step form logic:
    - Accommodation step (`hotelNights`) is now only shown for UserTypes `public` and `event_staff_accredited`.
  - Ensured new data fields are saved to the database via `saveToDatabase` function.
  - Updated `userTypes` array for selection, including new and retained types.
- Updated i18n translation files (`en.json`, `es.json`, `gl.json`) with new keys for user types, roles, service types, and related form labels/messages. Restored translations for `logistics` and `staff`.
- Updated `project/src/types/index.ts` with new `UserType` options, `AccreditedRole`, and `TransportServiceType`, and added new fields to `TravelData`.
- Updated `project/src/types/Database.ts` (conceptual model) to reflect schema changes for `travel_data_submissions` table (new columns and enum values). Provided SQL script for database migration.
- Updated `TODO.md` to reflect progress on item 14.

This change allows fo

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -27,9 +27,28 @@
     "logistics": "Logistics",
     "provider": "Provider",
     "staff": "Staff",
+    "event_staff_accredited": "Accredited Event Attendee",
+    "internal_staff_organization": "Event Organization Staff",
+    "transport_services_stakeholders": "Transport Services for Stakeholders",
     "other": "Other",
     "required": "Please select a user type",
-    "specifyOther": "Please specify the 'Other' user type"
+    "specifyOther": "Please specify the 'Other' user type",
+    "accreditedRole": "Accredited Role",
+    "selectAccreditedRole": "Select accredited role",
+    "specifyAccreditedRoleOther": "Please specify the 'Other' accredited role",
+    "loc": "LOC",
+    "vip": "VIP",
+    "timing": "Timing",
+    "photo": "Photo",
+    "media": "Media",
+    "tv_production": "TV Production",
+    "sports_delegations": "Sports Delegations",
+    "other_accredited_role": "Other (Specify)",
+    "organizationStaffDetails": "Description (e.g., role, responsibilities)",
+    "transportServiceType": "Transport Service Type",
+    "selectTransportServiceType": "Select transport service type",
+    "spectator_shuttle_bus": "Shuttle buses for spectators",
+    "team_transport_services": "Transport services for teams (airport-venue)"
   },
   "transport": {
     "segments": "Travel segments",
