--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -27,9 +27,28 @@
     "logistics": "Logística",
     "provider": "Proveedor",
     "staff": "Personal",
+    "event_staff_accredited": "Asistente acreditado al EVENTO",
+    "internal_staff_organization": "Personal de organización del evento",
+    "transport_services_stakeholders": "Servicios de transporte a otras partes interesadas",
     "other": "Otro",
     "required": "Selecciona un tipo de usuario",
-    "specifyOther": "Por favor, especifica el tipo de usuario 'Otro'"
+    "specifyOther": "Por favor, especifica el tipo de usuario 'Otro'",
+    "accreditedRole": "Rol de acreditado",
+    "selectAccreditedRole": "Seleccione el rol de acreditado",
+    "specifyAccreditedRoleOther": "Por favor, especifica el rol de acreditado 'Otro'",
+    "loc": "LOC",
+    "vip": "VIP",
+    "timing": "Timing",
+    "photo": "Foto",
+    "media": "Medios",
+    "tv_production": "Producción de TV",
+    "sports_delegations": "Delegaciones deportivas",
+    "other_accredited_role": "Otro (Especificar)",
+    "organizationStaffDetails": "Descripción (ej. rol, responsabilidades)",
+    "transportServiceType": "Tipo de servicio de transporte",
+    "selectTransportServiceType": "Seleccione el tipo de servicio de transporte",
+    "spectator_shuttle_bus": "Autobuses lanzadera para espectadores",
+    "team_transport_services": "Servicios de transporte para equipos (aeropuerto-sede)"
   },
   "transport": {
     "segments": "Tramos del viaje",
