--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -27,9 +27,28 @@
     "logistics": "Loxística",
     "provider": "Provedor",
     "staff": "Persoal",
+    "event_staff_accredited": "Asistente acreditado ao EVENTO",
+    "internal_staff_organization": "Persoal de organización do evento",
+    "transport_services_stakeholders": "Servizos de transporte a outras partes interesadas",
     "other": "Outro",
     "required": "Selecciona un tipo de usuario",
-    "specifyOther": "Por favor, especifica o tipo de persoa usuaria 'Outro'"
+    "specifyOther": "Por favor, especifica o tipo de persoa usuaria 'Outro'",
+    "accreditedRole": "Rol de acreditado",
+    "selectAccreditedRole": "Seleccione o rol de acreditado",
+    "specifyAccreditedRoleOther": "Por favor, especifica o rol de acreditado 'Outro'",
+    "loc": "LOC",
+    "vip": "VIP",
+    "timing": "Timing",
+    "photo": "Foto",
+    "media": "Medios",
+    "tv_production": "Produción de TV",
+    "sports_delegations": "Delegacións deportivas",
+    "other_accredited_role": "Outro (Especificar)",
+    "organizationStaffDetails": "Descrición (ex. rol, responsabilidades)",
+    "transportServiceType": "Tipo de servizo de transporte",
+    "selectTransportServiceType": "Seleccione o tipo de servizo de transporte",
+    "spectator_shuttle_bus": "Autobuses lanzadeira para espectadores",
+    "team_transport_services": "Servizos de transporte para equipos (aeroporto-sede)"
   },
   "transport": {
     "segments": "Tramos da viaxe",
